--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,10 @@ jobs:
       uses: actions/checkout@v2
       with:
         persist-credentials: false
-        
+    - name: use node
+      uses: actions/setup-node@v2
+      with:
+        node-version: 16 # node版本
     # react项目为npm run-script build，vue项目改为npm run build
     - name: Install and Build
       run: |
